--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwindcss-fluid-type": "^2.0.6"
   },
   "dependencies": {
+    "@astrojs/vercel": "^7.8.0",
     "@fontsource-variable/inter": "^5.0.17",
     "micromodal": "^0.4.10",
     "resend": "^4.0.0",
